--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
 <body>
-	<footer>Sample text.
-	</footer>
+	<h1>
+		Ejemplo Web App 
+	</h1>
 </body></html>
